--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
         <div class="quiz__heading">
           <h2 class="quiz__title">Простой квиз</h2>
           <div class="quiz__progress progress">
-            <b class="progress__current">1</b> of
+            <b class="progress__current">0</b> из
             <b class="quiz__total">10</b>
           </div>
           <div class="quiz__score">Score: <b class="score">0</b></div>
         </div>
         <div class="quiz__base base">
           <!-- здесь кнопка начать или далее и сами вопросы с ответами -->
-          <!-- <button type="button" class="quiz__button_main">Начать квиз</button> -->
-          <img
+          <button type="button" class="quiz__button_main">Начать квиз</button>
+          <!-- <img
             class="base__image"
             src="https://www.mathsisfun.com/numbers/images/sqrt2.svg"
             alt="something"
@@ -51,11 +51,11 @@
             <li class="base__answer">
               <button class="quiz__button_secondary">Ответ 4</button>
             </li>
-          </ul>
+          </ul> -->
         </div>
         <div class="quiz__status">
           <!-- Здесь будет статус ответа -->
-          <button class="button-next">Следующий</button>
+          <button class="button-next hide-button">Следующий</button>
         </div>
       </div>
     </main>
