fix the problem when user knows answer before submitting it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./style.css" />
-    <script defer src="./index.js"></script>
+    <script defer src="./index.js" type="module"></script>
   </head>
   <body>
     <header class="header">
@@ -30,31 +30,9 @@
           <div class="quiz__score">Score: <b class="score">0</b></div>
         </div>
         <div class="quiz__base base">
-          <!-- здесь кнопка начать или далее и сами вопросы с ответами -->
           <button type="button" class="quiz__button_main">Начать квиз</button>
-          <!-- <img
-            class="base__image"
-            src="https://www.mathsisfun.com/numbers/images/sqrt2.svg"
-            alt="something"
-          />
-          <h2 class="base__question">Первый вопрос?</h2>
-          <ul class="base__answers">
-            <li class="base__answer">
-              <button class="quiz__button_secondary">Ответ 1</button>
-            </li>
-            <li class="base__answer">
-              <button class="quiz__button_secondary">Ответ 2</button>
-            </li>
-            <li class="base__answer">
-              <button class="quiz__button_secondary">Ответ 3</button>
-            </li>
-            <li class="base__answer">
-              <button class="quiz__button_secondary">Ответ 4</button>
-            </li>
-          </ul> -->
         </div>
         <div class="quiz__status">
-          <!-- Здесь будет статус ответа -->
           <button class="button-next hide-button">Следующий</button>
         </div>
       </div>
