--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2 class="quiz__title">Простой квиз</h2>
           <div class="quiz__progress progress">
             <b class="progress__current">0</b> из
-            <b class="quiz__total">10</b>
+            <b class="quiz__total">10</b> <!-- А что если в квизе будет не 10 вопросов?-->
           </div>
           <div class="quiz__score">Score: <b class="score">0</b></div>
         </div>
