--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./normalize.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <script defer src="./index.js" type="module"></script>
   </head>
   <body>
@@ -20,20 +20,23 @@
       </p>
     </header>
     <main class="main">
-      <div class="quiz">
+      <div class="quiz main__quiz">
         <div class="quiz__heading">
           <h2 class="quiz__title">Простой квиз</h2>
           <div class="quiz__progress progress">
-            <b class="progress__current">0</b> из
-            <b class="quiz__total">10</b> <!-- А что если в квизе будет не 10 вопросов?-->
+            <b class="progress__current">0</b> из <b class="quiz__total">0</b>
           </div>
           <div class="quiz__score">Score: <b class="score">0</b></div>
         </div>
         <div class="quiz__base base">
-          <button type="button" class="quiz__button_main">Начать квиз</button>
+          <button type="button" class="quiz__button_main" id="start-button">
+            Начать квиз
+          </button>
         </div>
         <div class="quiz__status">
-          <button class="button-next hide-button">Следующий</button>
+          <button class="button-next hide-button" type="button">
+            Следующий
+          </button>
         </div>
       </div>
     </main>
