--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <script defer src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <header class="header">
